--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
     "@nuxt/devtools": "latest",
     "@types/node": "^18",
     "nuxt": "^3.6.2"
+  },
+  "dependencies": {
+    "sass": "^1.63.6"
   }
 }
