(feat): indexedDB for demo purposes only

--- a/package.json
+++ b/package.json
@@ -14,7 +14,11 @@
     "nuxt": "^3.6.2"
   },
   "dependencies": {
+    "@pinia/nuxt": "^0.4.11",
+    "bcryptjs": "^2.4.3",
+    "idb": "^7.1.1",
     "mitt": "^3.0.1",
+    "pinia": "^2.1.4",
     "sass": "^1.63.6"
   }
 }
