--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
   },
   "dependencies": {
     "@pinia/nuxt": "^0.4.11",
-    "bcryptjs": "^2.4.3",
-    "idb": "^7.1.1",
+    "axios": "^1.4.0",
     "mitt": "^3.0.1",
     "pinia": "^2.1.4",
     "sass": "^1.63.6"
